force-app/main/default/objects/Personnel__c/Personnel__c.object-meta.xml
<CustomObject>
    <description>Learning object for personnel records. It intentionally avoids highly sensitive data such as SSNs, birth dates, and compensation.</description>
    <label>Personnel</label>
    <nameField>
        <displayFormat>PER-{00000}</displayFormat>
        <label>Personnel Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personnel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>