force-app/main/default/objects/Personnel__c/fields/Clearance_Level__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Level__c</fullName>
    <description>Sample-only clearance category. Replace with your real classification model before production use.</description>
    <label>Clearance Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Secret</fullName>
            </value>
            <value>
                <fullName>Top Secret</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>