force-app/main/default/objects/Personnel__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operations</fullName>
                <default>true</default>
                <label>Operations</label>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>