force-app/main/default/objects/Personnel__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>Last_Name__c &amp; &quot;, &quot; &amp; First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>