force-app/main/default/objects/Personnel__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <description>Stable external identifier used by upsert examples.</description>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>