force-app/main/default/objects/Personnel__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Due Soon</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>