force-app/main/default/objects/Personnel__c/validationRules/Termination_After_Hire.validationRule-meta.xml
<ValidationRule>
    <fullName>Termination_After_Hire</fullName>
    <active>true</active>
    <description>Termination date cannot be before hire date.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Termination_Date__c)), Termination_Date__c &lt; Hire_Date__c)</errorConditionFormula>
    <errorMessage>Termination Date cannot be before Hire Date.</errorMessage>
</ValidationRule>