force-app/main/default/objects/Personnel__c/validationRules/Termination_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Termination_Date_Required</fullName>
    <active>true</active>
    <description>Terminated personnel records need a termination date.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Terminated&quot;), ISBLANK(Termination_Date__c))</errorConditionFormula>
    <errorMessage>Termination Date is required when Status is Terminated.</errorMessage>
</ValidationRule>